// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LinkSubmittedCard > hides link actions for brand admin viewers 1`] = `
<div
  class="overflow-hidden rounded-2xl border-2 bg-card border-success/60"
>
  <div
    class="flex items-center gap-2 px-4 py-2.5 bg-muted text-success"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-link size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
      />
      <path
        d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
      />
    </svg>
    <span
      class="text-xs font-semibold uppercase tracking-widest"
    >
      Published link
    </span>
  </div>
  <div
    class="p-4"
  >
    <div
      class="space-y-4"
    >
      <p
        class="text-sm text-foreground"
      >
        Just published! Sharing the link here.
      </p>
      <a
        class="flex items-center gap-2 rounded-lg border border-border bg-card px-3 py-2.5 font-mono text-sm text-foreground transition-colors hover:bg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        href="https://youtube.com/watch?v=xK93"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class="min-w-0 flex-1 truncate"
        >
          https://youtube.com/watch?v=xK93
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-external-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`LinkSubmittedCard > hides link actions for brand member viewers 1`] = `
<div
  class="overflow-hidden rounded-2xl border-2 bg-card border-success/60"
>
  <div
    class="flex items-center gap-2 px-4 py-2.5 bg-muted text-success"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-link size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
      />
      <path
        d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
      />
    </svg>
    <span
      class="text-xs font-semibold uppercase tracking-widest"
    >
      Published link
    </span>
  </div>
  <div
    class="p-4"
  >
    <div
      class="space-y-4"
    >
      <p
        class="text-sm text-foreground"
      >
        Just published! Sharing the link here.
      </p>
      <a
        class="flex items-center gap-2 rounded-lg border border-border bg-card px-3 py-2.5 font-mono text-sm text-foreground transition-colors hover:bg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        href="https://youtube.com/watch?v=xK93"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class="min-w-0 flex-1 truncate"
        >
          https://youtube.com/watch?v=xK93
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-external-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`LinkSubmittedCard > hides link actions for creator viewers 1`] = `
<div
  class="overflow-hidden rounded-2xl border-2 bg-card border-success/60"
>
  <div
    class="flex items-center gap-2 px-4 py-2.5 bg-muted text-success"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-link size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
      />
      <path
        d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
      />
    </svg>
    <span
      class="text-xs font-semibold uppercase tracking-widest"
    >
      Published link
    </span>
  </div>
  <div
    class="p-4"
  >
    <div
      class="space-y-4"
    >
      <p
        class="text-sm text-foreground"
      >
        Just published! Sharing the link here.
      </p>
      <a
        class="flex items-center gap-2 rounded-lg border border-border bg-card px-3 py-2.5 font-mono text-sm text-foreground transition-colors hover:bg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        href="https://youtube.com/watch?v=xK93"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class="min-w-0 flex-1 truncate"
        >
          https://youtube.com/watch?v=xK93
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-external-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`LinkSubmittedCard > shows link actions only for brand owners when the link is submitted 1`] = `
<div
  class="overflow-hidden rounded-2xl border-2 bg-card border-success/60"
>
  <div
    class="flex items-center gap-2 px-4 py-2.5 bg-muted text-success"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-link size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
      />
      <path
        d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
      />
    </svg>
    <span
      class="text-xs font-semibold uppercase tracking-widest"
    >
      Published link
    </span>
  </div>
  <div
    class="p-4"
  >
    <div
      class="space-y-4"
    >
      <p
        class="text-sm text-foreground"
      >
        Just published! Sharing the link here.
      </p>
      <a
        class="flex items-center gap-2 rounded-lg border border-border bg-card px-3 py-2.5 font-mono text-sm text-foreground transition-colors hover:bg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
        href="https://youtube.com/watch?v=xK93"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class="min-w-0 flex-1 truncate"
        >
          https://youtube.com/watch?v=xK93
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-external-link size-4 shrink-0 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="M10 14 21 3"
          />
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
        </svg>
      </a>
      <div
        class="flex gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary-hover active:brightness-95 h-9 px-4 py-2 has-[>svg]:px-3 flex-1"
          data-size="default"
          data-slot="button"
          data-variant="default"
        >
          Approve link
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium whitespace-nowrap transition-all outline-none focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 border border-border bg-background shadow-xs hover:bg-surface-hover hover:text-foreground active:bg-surface-active h-9 px-4 py-2 has-[>svg]:px-3 flex-1"
          data-size="default"
          data-slot="button"
          data-variant="outline"
        >
          Request changes on link
        </button>
      </div>
    </div>
  </div>
</div>
`;
